<resources>
    <string name="app_name">how_about_here</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="kakao_app_key">7ac7170e8621f04617fcd208ce7d9eb3</string>
    <string name="home_free_cancel">무료취소룸</string>
    <string name="motel">모텔</string>
    <string name="hotel_resort">호텔ㆍ리조트</string>
    <string name="black">BLACK</string>
    <string name="pension_camp">펜션ㆍ캠핑</string>
    <string name="guest_korean">게하ㆍ한옥</string>
    <string name="event">이벤트 기획전</string>
    <string name="term_of_service">
        (주)여기어때컴퍼니는 통신판매중개자로서 통신판매의 당사자가 아니며,
        \n
        상품의 예약, 이용 및 환불 등과 관련한 의무와 책임은 각 판매자에게 있습니다.</string>
    <string name="sale_for_first">선착순할인</string>
    <string name="rent_room">무한대실</string>
    <string name="payback_50">50%페이백</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="my_loca">내주변</string>
    <string name="my">내정보</string>
    <string name="more">더보기</string>
    <string name="no_id">계정이 없으신가요?</string>
    <string name="join_email">이메일로 가입</string>
    <string name="join_company">기업회원 가입</string>
    <string name="everyday">날마다</string>
    <string name="over_6">6시간 이상</string>
    <string name="eksgkfndmlgbrkrkwndjwlsekaus">단하루의\n휴가가주어진다면</string>

</resources>