<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/empty"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView_motel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@color/colorPrimaryDark"
                android:text="@string/motel"
                android:textSize="@dimen/home_text_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>


            <TextView
                android:id="@+id/textView_hotel_resort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/hotel_resort"
                android:textSize="@dimen/home_text_18"
                app:layout_constraintBottom_toBottomOf="@+id/textView_motel"
                app:layout_constraintStart_toEndOf="@+id/textView_motel"
                app:layout_constraintTop_toTopOf="@+id/textView_motel" />

            <TextView
                android:id="@+id/textView_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/black"
                android:textSize="@dimen/home_text_18"
                app:layout_constraintBottom_toBottomOf="@+id/textView_motel"
                app:layout_constraintStart_toEndOf="@+id/textView_hotel_resort"
                app:layout_constraintTop_toTopOf="@+id/textView_motel" />

            <TextView
                android:id="@+id/textView_pension_camp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/pension_camp"
                android:textSize="@dimen/home_text_18"
                app:layout_constraintBottom_toBottomOf="@+id/textView_motel"
                app:layout_constraintStart_toEndOf="@+id/textView_black"
                app:layout_constraintTop_toTopOf="@+id/textView_motel" />

            <TextView
                android:id="@+id/textView_guest_korean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/guest_korean"
                android:textSize="@dimen/home_text_18"
                app:layout_constraintBottom_toBottomOf="@+id/textView_motel"
                app:layout_constraintStart_toEndOf="@+id/textView_pension_camp"
                app:layout_constraintTop_toTopOf="@+id/textView_motel" />

            <TextView
                android:id="@+id/textView_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/event"
                android:textSize="@dimen/home_text_18"
                app:layout_constraintBottom_toBottomOf="@+id/textView_motel"
                app:layout_constraintStart_toEndOf="@+id/textView_guest_korean"
                app:layout_constraintTop_toTopOf="@+id/textView_motel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/home_image_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/home_viewpage2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TableLayout
        android:id="@+id/table1"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_image_slider">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_marginRight="@dimen/home_hash_5"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/home_text_20"
                android:paddingBottom="@dimen/home_text_20"
                android:background="@drawable/home_motel_card"

                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/home_motel_icon2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale_for_first"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/everyday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/everyday"
                    app:layout_constraintEnd_toEndOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="선착순 1만원!!"
                    app:layout_constraintEnd_toEndOf="@+id/textView10"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/everyday" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:paddingTop="@dimen/home_text_20"
                android:paddingBottom="@dimen/home_text_20"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="2.5dp"
                android:layout_marginRight="2.5dp"
                android:background="@drawable/home_motel_card"

                >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/home_motel_icon3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payback_50"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <TextView
                    android:id="@+id/after_50percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="퇴실 후 50%"
                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="할인쿠폰 받아요."
                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/after_50percent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/home_hash_5"
                android:layout_height="wrap_content"
                android:background="@drawable/home_motel_card"
                android:paddingTop="@dimen/home_text_20"
                android:paddingBottom="@dimen/home_text_20"
                >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/home_motel_icon1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rent_room"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/over_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/over_6"
                    app:layout_constraintEnd_toEndOf="@+id/textView19"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="대실이 있다고?"
                    app:layout_constraintEnd_toEndOf="@+id/textView19"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/over_6" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

    </TableLayout>







    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/home_card_back"
        android:padding="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/table1">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="@font/how"
            android:text="취향대로"
            android:textColor="@color/how"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/how"
            android:text="모텔어때?"
            android:textColor="@color/black"
            android:textSize="@dimen/home_text_20"
            app:layout_constraintBottom_toBottomOf="@+id/textView22"
            app:layout_constraintStart_toEndOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="@+id/textView22" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView22"
            tools:layout_editor_absoluteX="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_hash_5"
                android:weightSum="2">

                <TextView

                    android:layout_width="0dp"

                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/home_hash_3"
                    android:layout_weight="1"
                    android:background="@drawable/home_motel_hashcard"
                    android:padding="@dimen/home_hash_8"
                    android:text="#핫플"
                    android:textAlignment="center"
                    android:textColor="@color/how"
                    android:textSize="@dimen/home_text_18" />

                <TextView
                    android:layout_width="0dp"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/home_hash_3"
                    android:layout_weight="1"
                    android:background="@drawable/home_motel_hashcard"
                    android:padding="@dimen/home_hash_8"
                    android:text="#고사양PC"
                    android:textAlignment="center"
                    android:textColor="@color/how"
                    android:textSize="@dimen/home_text_18" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_hash_5">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/home_hash_3"
                    android:layout_weight="1"
                    android:background="@drawable/home_motel_hashcard"
                    android:padding="@dimen/home_hash_8"
                    android:text="#넷플릭스"
                    android:textAlignment="center"
                    android:textColor="@color/how"
                    android:textSize="@dimen/home_text_18" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/home_hash_3"
                    android:layout_weight="1"
                    android:background="@drawable/home_motel_hashcard"
                    android:padding="@dimen/home_hash_8"
                    android:text="#무한대실"
                    android:textAlignment="center"

                    android:textColor="@color/how"
                    android:textSize="@dimen/home_text_18" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_hash_5">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/home_hash_3"
                    android:layout_weight="1"
                    android:background="@drawable/home_motel_hashcard"
                    android:padding="@dimen/home_hash_8"
                    android:text="#방역안심"
                    android:textAlignment="center"
                    android:textColor="@color/how"
                    android:textSize="@dimen/home_text_18" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/home_hash_3"
                    android:layout_weight="1"
                    android:background="@drawable/home_motel_hashcard"
                    android:padding="@dimen/home_hash_8"
                    android:text="#스타일러"
                    android:textAlignment="center"
                    android:textColor="@color/how"
                    android:textSize="@dimen/home_text_18" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


